fix: node, asset title text overflow in inspector
- show ellipsis when title text has exceeded its parent container

--- a/editor/inspector/contributions/asset.css
+++ b/editor/inspector/contributions/asset.css
@@ -18,6 +18,7 @@
 :host > .container > .header {
     display: flex;
     flex: 1;
+    min-width: 0;
 }
 
 :host > .container > .header > .icon {
